# game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  rpg
.cache/clangd/index/: Animation.h.A96666E2031C1F0F.idx  AssetsManager.h.D65AE0F0DB695BBE.idx  AssetsPaths.h.D7025E2F4D841D65.idx  Button.cpp.6622DCA5B94F4CE6.idx  Button.h.8C0E27B2C8E57A25.idx  Characters.cpp.D6E16641A9A0A695.idx  Characters.h.1AFC820397FFA133.idx  CombatState.cpp.79F80640B0D1A8A5.idx  CombatState.h.002A18C55B5C4CB7.idx  Entity.h.1809E894C928781C.idx  Game.cpp.481C9F3806E8613B.idx  Game.h.FCF3A3162EBF1D40.idx  GameState.cpp.54DB416BD611F4F0.idx  GameState.h.0E24009136DA14A7.idx  Gui.h.79CA393D28CB3B2D.idx  Inanimated.h.82669F522B5FFD66.idx  MainMenuState.cpp.51EE7EFEA2FCDBC7.idx  MainMenuState.h.A360309DD5F4C2BE.idx  SettingsState.h.A410213E525DC0E3.idx  State.cpp.AF5949F3D0F9D502.idx  State.h.AD892ED36FBC6A57.idx  Tile.cpp.C3108141FA074B21.idx  Tile.h.4AC3C9C9B7408CD1.idx  TileMap.cpp.D7DD8DC70F18576B.idx  TileMap.h.25E1598E1B34088D.idx  definitions.h.14AAC045ED0390D9.idx  main.cpp.2E7251013C141530.idx  tileson.hpp.F66B98DA04E25EB6.idx
assets/items/: itemList.txt
assets/tiles/: Furniture.json  backgroundItems.json  combat.json  combat2.json  combatArena.json  final_house.json  ground.json  house1.json  house2.json  house3.json  house4.json  house5.json  house6.json  houses.json  interiorFloor.json  map1.json  nature.json
config/: combat1.csv  combat1.txt  keysbind.ini  level1.txt  map.csv  window.ini
config/maps/: layer1.csv  layer2.csv
headers/: Game.h  GameState.h  State.h
include/: Animation.h  AssetsManager.h  AssetsPaths.h  Button.h  Characters.h  CombatState.h  Combatant.h  DialogueBox.h  Enemy.h  Entity.h  Game.h  GameOverState.h  GameState.h  Gui.h  House.h  HouseManager.h  Inanimated.h  InteractionManager.h  InventoryState.h  ItemManager.h  LoadGameState.h  MainMenuState.h  MapTiles.h  NPC.h  PauseGameState.h  PauseMenu.h  Player.h  SaveAndLoad.h  SaveGame.h  SaveObject.h  SettingsState.h  State.h  Tile.h  TileMap.h  Villager.h  asset_data.h  definitions.h  itemManager.h  tileson.hpp
include/characterSuperclasses/: Entity.h  IdleMovement.h  Movement.h
include/entity_attributes/: Combatant.h  IdleMovement.h  Movement.h  SteeredMovement.h
include/managers/: EnemyManager.h  HouseManager.h  ItemManager.h
include/object_attributes/: Combatant.h
include/states/: CombatState.h  GameOverState.h  GameState.h  GameWonState.h  InventoryState.h  MainMenuState.h  MakesErrorSound.h  PauseGameState.h  SettingsState.h  State.h
libs/: tileson.hpp
saved_games/: last_saved_game.txt
src/: AssetsManager.cpp  Button.cpp  Characters.cpp  CombatState.cpp  DialogueBox.cpp  Enemy.cpp  EnemyManager.cpp  Game.cpp  Game.h  GameOverState.cpp  GameState.cpp  GameWonState.cpp  Gui.cpp  HouseManager.cpp  InteractionManager.cpp  InventoryState.cpp  ItemManager.cpp  LoadGameState.cpp  MainMenuState.cpp  PauseGameState.cpp  PauseMenu.cpp  Player.cpp  SaveGame.cpp  SettingsState.cpp  State.cpp  Tile.cpp  TileMap.cpp  itemManager.cpp  main.cpp
src/headers/: Game.h  GameState.h
